--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 # Visual Studio 2015 user specific files
 .vs/
+.vscode/
+ObstacleAssult.code-workspace
 
 # Compiled Object files
 *.slo
@@ -72,3 +74,4 @@ Plugins/*/Intermediate/*
 
 # Cache files for the editor to use
 DerivedDataCache/*
+
